# orive-app

./: .gitignore  Makefile  README.md
backend/: .env.example  START_BACKEND.ps1  env.example  pyproject.toml  test_client.html
backend/app/: crud.py  db.py  main.py  models.py  schemas.py  settings.py
backend/app/ai/: generator.py  prompts.py
backend/app/auth/: router.py  schemas.py  security.py
backend/app/routers/: closet.py  colour.py  feedback.py  health.py  occasions.py  playbooks.py
backend/app/services/: ai_tagger.py  colour_analysis.py  storage.py
backend/app/utils/: png_gen.py  seed.py
backend/scripts/: generate_openapi.py
contracts/: .gitkeep
deploy/: orive.conf  user-data.sh
docs/: GAPS.md  IMPLEMENTATION.md  LAYOUTS.md  QUESTIONS_FOR_PM.md  QUICKSTART.md  TROUBLESHOOTING.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/closet/: page.tsx
frontend/app/colour-analysis/: page.tsx
frontend/app/components/: AppShell.tsx  EmptyState.tsx  ErrorState.tsx  Loading.tsx  Nav.tsx  OriveLogo.tsx
frontend/app/dashboard/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/occasions/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/playbooks/: page.tsx
frontend/app/register/: page.tsx
frontend/app/reset-password/: page.tsx
frontend/app/settings/: page.tsx
frontend/lib/: colour-match.ts
frontend/src/: App.tsx  main.tsx
(+28 files in other folders)
